noinst_LIBRARIES = libGA.a
libGA_a_SOURCES  =  GA1DArrayGenome.C   gabincvt.C       GAListBASE.h    GASimpleGA.C \
					GA1DArrayGenome.h   gabincvt.h       GAList.C        GASimpleGA.h \
					GA1DBinStrGenome.C  GABinStr.C       GAListGenome.C  GASStateGA.C \
					GA1DBinStrGenome.h  GABinStr.h       GAListGenome.h  GASStateGA.h \
					GA2DArrayGenome.C   gaconfig.h       GAList.h        GAStatistics.C \
					GA2DArrayGenome.h   GADCrowdingGA.C  GAMask.h        GAStatistics.h \
					GA2DBinStrGenome.C  GADCrowdingGA.h  GANode.h        GAStringGenome.C \
					GA2DBinStrGenome.h  GADemeGA.C       GAParameter.C   GAStringGenome.h \
					GA3DArrayGenome.C   GADemeGA.h       GAParameter.h   GATreeBASE.C \
					GA3DArrayGenome.h   gaerror.C        GAPopulation.C  GATreeBASE.h \
					GA3DBinStrGenome.C  gaerror.h        GAPopulation.h  GATree.C \
					GA3DBinStrGenome.h  GAEvalData.h     garandom.C      GATreeGenome.C \
					GAAllele.C          GAGenome.C       garandom.h      GATreeGenome.h \
					GAAllele.h          GAGenome.h       GARealGenome.C  GATree.h \
					GAArray.h           ga.h             GARealGenome.h  gatypes.h \
					GABaseGA.C          gaid.h           GAScaling.C     gaversion.h \
					GABaseGA.h          GAIncGA.C        GAScaling.h \
					GABin2DecGenome.C   GAIncGA.h        GASelector.C    std_stream.h \
					GABin2DecGenome.h   GAListBASE.C     GASelector.h
      
       
         
       
