noinst_LIBRARIES = libvf.a
libvf_a_SOURCES  =  allocpool.h \
				   	error.cc error.h  \
				   	match.cc match.h  \
				   	ull_sub_state.cc ull_sub_state.h	\
				   	vf_mono_state.cc vf_mono_state.h	\
				   	argedit.cc argedit.h \
				   	sd_state.cc sd_state.h \
					gene.cc gene.h	\
					vf2_mono_state.cc vf2_mono_state.h	\
					vf_state.cc vf_state.h	\
					argloader.cc argloader.h	\
					sortnodes.cc sortnodes.h    \
					gene_mesh.cc gene_mesh.h  	\
					vf2_state.cc vf2_state.h    \
					vf_sub_state.cc vf_sub_state.h	\
					argraph.cc argraph.h     		\
					state.h							\
					ull_state.cc ull_state.h  		\
					vf2_sub_state.cc vf2_sub_state.h \
					xsubgraph.cc xsubgraph.h	\
					dict.h
      
       
         
       
