noinst_LIBRARIES = libGK.a
libGK_a_SOURCES  = 	b64.c         gk_defs.h      gk_mksort.h   itemsets.c     pqueue.c \
					blas.c        gk_externs.h   gk_mkutils.h  random.c \
					csr.c         gk_getopt.h    gk_proto.h    mcore.c        seq.c \
					error.c       GKlib.h        gkregex.c     memory.c       sort.c \
					evaluate.c    gk_macros.h    gkregex.h     ms_inttypes.h  string.c \
					fkvkselect.c  gk_mkblas.h    gk_struct.h   ms_stat.h      timers.c \
					fs.c          gk_mkmemory.h  gk_types.h    ms_stdint.h    tokenizer.c \
					getopt.c      gk_mkpqueue.h  htable.c      omp.c          util.c \
					gk_arch.h     gk_mkrandom.h  io.c          pdb.c
 
      
       
         
       
