noinst_LIBRARIES 	= libMETIS.a
libMETIS_a_SOURCES  = 	auxapi.c      fm.c            kwayfm.c      mincover.c  separator.c \
						balance.c     fortran.c       kwayrefine.c  mmd.c       sfm.c \
						bucketsort.c  frename.c       macros.h      ometis.c    srefine.c \
						checkgraph.c  gklib.c         options.c   stat.c \
						coarsen.c     gklib_defs.h    mcutil.c      parmetis.c  stdheaders.h \
						compress.c    gklib_rename.h  mesh.c        pmetis.c    struct.h \
						contig.c      graph.c         meshpart.c    proto.h     timing.c \
						debug.c       initpart.c      metislib.h    refine.c    util.c \
						defs.h        kmetis.c        minconn.c     rename.h    wspace.c
						
      
       
         
       
